# CodeWisdom-Analyzer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: Analyzer.cpp  Analyzer.h  LanguageStrategy.h  Metrics.h  Parser.cpp  Parser.h  TerminalColor.h  main.cpp
